samples/_failures_safe/1761286681_227312_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_409adf4b.c: In function ‘main’:
./samples/SAFE/__tmp_409adf4b.c:209:9: error: expected expression at end of input
  209 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_409adf4b.c:209:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_409adf4b.c:209:9: error: expected declaration or statement at end of input
